* Added descriptions to source files. * Bumped version to 0.1.0. * Added bump-version.sh helper script and NEWS file.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,11 @@
 include AUTHORS
 include ChangeLog
 include COPYING
+include NEWS
 include README
 include picc
 include picc-objdump
 include setup.py
+include bump-version.sh
 recursive-include data *
 recursive-include lib/picc *.py
