* ar.py, picc: Added support for static libraries (ar files). * linker.py: Bug corrected in calculating addresses for symbols in absolute     sections. * MANIFEST.in, setup.py: Corrected files for instalation.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,7 @@
-include AUTHORS
-include ChangeLog
 include COPYING
-include NEWS
 include README
-include picc
-include picc-objdump
 include setup.py
 include bump-version.sh
+recursive-include bin *
 recursive-include data *
-recursive-include lib/picc *.py
+recursive-include picc *.py
